
Report bugs and issues to:
http://sourceforge.net/tracker/?func=add&group_id=134191&atid=729299

***************************************
Pipeline Release, ????-??-??
***************************************

- Fixed some problems in the DTbook to LaTeX transformer namely
  - handle special chars in title, author and date
  - Fix a problem with noteref lookup

***************************************
Pipeline Release, 2010-01-25
***************************************

- Refined documentation of the ODT to DAISY XML script and transformer
- Fixed a bug with DTB metadata repeatable in Z39.86 but not in DAISY 2.02
- Added support for Braillo 200 in PEF embosser scripts  

***************************************
Pipeline RC1 Release, 2010-01-18
***************************************

- New DTBook to DAISY 3 text-only script based on Java, contributed by James Pritchett, RFB&D.
- Added a DTBook Fix step to the XSLT-based DTBook to DAISY 3 text-only script. 
- Upgraded the Eclipse RCP target platform to a version based on Eclipse 3.5.1
- Updated the documentation of newly contributed scripts.

***************************************
Pipeline Beta Release, 2009-12-22
***************************************

- New Hyphenator script, contributed by Joel Håkansson, TPB
- New DTBook to PEF script, contributed by Joel Håkansson, TPB
- New DTBook to text script, contributed by Joel Håkansson, TPB 
- New PEF File splitter script, contributed by Joel Håkansson, TPB
- New PEF File merger script, contributed by Joel Håkansson, TPB
- New ODT to DTBook script, contributed by Vincent Spiewak, Freelance.
- Beta version of a DTBook to DAISY 3 text-only script based on XSLT, contributed by Alex Bernier, BrailleNet.
- Added Finnish localization of the Narrator transformers, contributed by Päivi Suhonen, Celia.
- Added Norwegian localization of the Narrator transformers, contributed by Olav Indergaard, NLB.
- Added Japanese localization of the Narrator transformers, contributed by ATDO