@@ -113,7 +113,21 @@
 
       <dt>Paper size</dt>
       <dd><strong>Optional.</strong> The paper size to be used for the
-      generated LaTeX.</dd>	
+      generated LaTeX. You can either choose standard sizes such as <samp>A4</samp>
+      or <samp>letter</samp>, but you can also define a <samp>custom</samp> size and
+      consequently specify the page dimensions using the following parameters:
+	<dl>
+	  <dt>Paper Width</dt><dd><strong>Optional.</strong>Width of the paper</dd>
+	  <dt>Paper Height</dt><dd><strong>Optional.</strong>Height of the paper</dd>
+	  <dt>Left Margin</dt><dd><strong>Optional.</strong>Inner margin of the paper</dd>
+	  <dt>Right Margin</dt><dd><strong>Optional.</strong>Outer margin of the paper</dd>
+	  <dt>Top Margin</dt><dd><strong>Optional.</strong>Top margin of the page</dd>
+	  <dt>Bottom Margin</dt><dd><strong>Optional.</strong>Bottom margin of the page</dd>
+	</dl>
+</dd>
+
+      <dt>Line spacing</dt>
+      <dd><strong>Optional.</strong> The line spacing to be used for the generated LaTeX.</dd>	
 
       <dt>XML Validation Report</dt>
       <dd><strong>Optional.</strong> Path to a file to store a validation XML report in.</dd>	
