@@ -19,6 +19,9 @@ Pipeline Release, ????-??-??
 - Fixed some problems in the DTbook to LaTeX transformer namely
   - handle special chars in title, author and date
   - Fix a problem with noteref lookup
+- Added features to DTbook to LaTeX transformer
+  - Allow for custom specification of page dimensions
+  - Allow specification of line spacing
 
 ***************************************
 Pipeline Release, 2010-01-25
